# Production_management_app

./: CLAUDE.md  Cargo.toml  README.md  SKILL.md
.claude/: settings.json
.claude/rules/: core-rules.md  file-writing.md  multi-ai-workflow.md
src/: main.rs
