[package]
name = "production-manager"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "Production Management App - Manage your creative works"

[dependencies]
eframe = "0.29"
egui = "0.29"
egui_extras = { version = "0.29", features = ["all_loaders"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
rfd = "0.15"

[profile.release]
opt-level = 3
lto = true
strip = true

[[bin]]
name = "production-manager"
path = "src/main.rs"
